--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
     implementation 'com.alibaba:arouter-api:1.5.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     kapt 'com.alibaba:arouter-compiler:1.5.2'
 
     implementation 'androidx.core:core-ktx:1.7.0'
