--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ android {
 
 dependencies {
 
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+
     implementation 'com.alibaba:arouter-api:1.5.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
